update the task