@@ -1,21 +1,24 @@
 package utils;
 
-import aquality.selenium.browser.AqualityServices;
 import aquality.selenium.core.utilities.ISettingsFile;
 import aquality.selenium.core.utilities.JsonSettingsFile;
 import com.google.gson.Gson;
 import lombok.experimental.UtilityClass;
-import models.*;
+import models.EnvData;
+import org.apache.log4j.LogManager;
+import org.apache.log4j.Logger;
 
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 
 @UtilityClass
 public class SettingsTestData {
+    private static final Logger logger = LogManager.getLogger(SettingsTestData.class);
+
     public final String RESOURCES_PATH = "src/test/resources/";
     private final String ENVIRONMENT_PATH = RESOURCES_PATH + "environment/";
     private final ISettingsFile ENVIRONMENT_CONFIG = new JsonSettingsFile("env.json");
-    private final Gson GSON = new Gson() ;
+    private final Gson GSON = new Gson();
 
     public EnvData getEnvData() {
         String envConfigPath = "%s%s.json".formatted(ENVIRONMENT_PATH, getCurrentEnvironment());
@@ -30,7 +33,7 @@ public class SettingsTestData {
         try {
             return GSON.fromJson(new FileReader(filePath), tClass);
         } catch (FileNotFoundException e) {
-            AqualityServices.getLogger().error("Settings file %s not found or incorrect. Error msg: %s".formatted(filePath, e));
+            logger.error(String.format("Settings file %s not found or incorrect. Error msg: %s", filePath, e.getMessage()));
             throw new RuntimeException(e);
         }
     }
